--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    scrollbar-color: black;
+    scrollbar-color: var(--golden);
     background-size: cover;
     box-sizing: border-box;
     scroll-behavior: smooth;
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0px;
     margin: 0px;
-    height: 1515vh;
+    height: 1465vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.08fr 0.92fr 1.5fr 2.5fr 0.5fr 1.8fr 1.9fr 3fr  /*1fr*/ 0.25fr 2.2fr 0.5fr;
+    grid-template-rows: 0.08fr 0.92fr 1fr 2.5fr 0.5fr 1.8fr 1.9fr 3fr  /*1fr*/ 0.25fr 2.2fr 0.5fr;
     grid-template-areas: 
     "header"
     "video"
@@ -43,25 +43,27 @@ body{
     font-family: 'Lovelo';
     color: white;
 }
+.disappear{
+    display: none;
+}
 h1, h2, h3{
     font-weight: normal;
 }
 header{
     display: flex;
     flex-direction: row;
-    align-items: top;
-    justify-content: left;
-    padding: 0% 5%;
-    gap: 2%;
+    align-items: end;
+    justify-content: space-between;
+    padding: 0% 4%;
     grid-area: header;
 }
 .menu{
-    height: 100%;
+    height: 75%;
     width: 20%;
     background-image: url(images/menu.png);
-    background-size: 70%;
+    background-size: 50%;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: center;
 }
 .logo-text{
     height: 100%;
@@ -69,10 +71,7 @@ header{
     background-image: url(images/grindset-logo-text.png);
     background-size: 90%;
     background-repeat: no-repeat;
-    background-position: left;
-}
-.disappear{
-    opacity: 0;
+    background-position: center;
 }
 /* nav{
     display: flex;
@@ -111,26 +110,7 @@ nav p:hover{
 }
 
 */
-button{
-    border-radius: 100px;
-    border: solid 2px var(--golden); 
-    background-color: transparent;
-    font-family: 'Lovelo';
-    color: white;
-    padding-top: 0.3%;
-    margin-bottom: 4%;
-    font-size: 90%;
-}
-.btn1{
-    height: 40%;
-    width: 13%; 
-    margin-top: 4.5%;
-    opacity: 0;
-}
-button:hover{
-    cursor: pointer;
-    color: var(--golden);
-}
+
 #video{
     display: flex;
     flex-direction: column;
@@ -138,14 +118,14 @@ button:hover{
     justify-content: start;
     grid-area: video;
     padding-top: 30%;
-    gap: 3%;
+    gap: 5%;
 }
 .text{ 
+    padding: 0% 5%;
     text-align: center;
-    margin-bottom: 4%;
 }
 h1{
-    font-size: 200%;
+    font-size: 2rem;
 }
 .video-container{
     width: 90%;
@@ -158,7 +138,7 @@ h1{
 #obsah{
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     padding: 0% 5%;
     grid-area: obsah;
@@ -167,12 +147,12 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: center;
+    justify-content: start;
     width: 90%;
-    height: 80%;
+    height: 75%;
 }
 .line1{
-    font-size: 100%;
+    font-size: 1rem;
     opacity: 70%;
     line-height: 150%;
 }
@@ -180,11 +160,11 @@ h1{
     color: var(--golden);
 }
 h2{
-    font-size: 200%;
+    font-size: 2rem;
     line-height: 300%;
 }
 ul{
-    font-size: 100%;
+    font-size: 1rem;
     padding-left: 5%;
 list-style-type: circle;
 }
@@ -192,19 +172,31 @@ li{
     margin-bottom: 8%;  
     line-height: 120%;
 }
+button{
+    width: 40%;
+    border-radius: 100px;
+    border: solid 2px var(--golden); 
+    background-color: transparent;
+    font-family: 'Lovelo';
+    color: white;
+    padding: 3% 2%;
+    font-size: 0.9rem;
+}
+button:hover{
+    cursor: pointer;
+    color: var(--golden);
+}
+
 
 .image-container{
-    width: 70%;
-    height: 20%;
-    background-size: 70%;
+    width: 100%;
+    height: 25%;
+    background-size: 60%;
     background-image: url(images/grindset-logo.png);
     background-repeat: no-repeat;
     background-position: center;
 }
-.btn2{
-    height: 6%;
-    width: 40%; 
-}
+
 #vysledky1{
     display: flex;
     flex-direction: column;
@@ -263,7 +255,7 @@ li{
     grid-area: ogrindsete;
 }
 #ogrindsete p {
-    font-size: 100%;
+    font-size: 1rem;
 }
 #text1{
     display: flex;
@@ -286,7 +278,7 @@ li{
     line-height: normal;
 }
 #text1 .text-container p{
-    font-size: 100%;
+    font-size: 1rem;
     line-height: 150%;
 }
 .low-opacity{
@@ -319,7 +311,7 @@ li{
     line-height: normal;
 }
 #text2 .text-container li{
-    font-size: 100%;
+    font-size: 1rem;
     line-height: 150%;
 }
 #text2 .btn2{
@@ -362,7 +354,7 @@ li{
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    font-size: 100%;
+    font-size: 1rem;
     padding-top: 5%;
 }
 .row1, .row2{
@@ -391,7 +383,7 @@ li{
 }
 #faq h3{
     font-weight: normal;
-    font-size: 150%;
+    font-size: 1.5rem;
 }
 #porozmyslaj{
     display: flex;
@@ -399,7 +391,7 @@ li{
     align-items: center;
     justify-content: start;
     text-align: center;
-    padding: 0% 5%;
+    padding: 0% 10%;
     padding-top: 5%;
     grid-area: porozmyslaj;
 }
@@ -424,7 +416,7 @@ li{
     height: 90%;
 }
 #vysledky2 h2{
-    font-size: 150%;
+    font-size: 1.5rem;
 }
 #vysledky2 button{
     height: 3%;
@@ -445,7 +437,7 @@ footer{
     text-align: center;
 }
 footer p{
-    font-size: 60%;
+    font-size: 0.6rem;
 }
 footer .img{
     width: 30%;
@@ -483,9 +475,12 @@ footer .img{
 
 @media (min-width: 768px) {
     .disappear{
-        opacity: 1;
+        display: flex;
     }
     .computer-disappear{
+        display: none;
+    }
+    .menu{
         opacity: 0;
     }
     *{
@@ -547,9 +542,9 @@ footer .img{
     }
     .logo-text{
         height: 100%;
-        width: 20%;
+        width: 30%;
         background-image: url(images/grindset-logo-text.png);
-        background-size: 90%;
+        background-size: 100%;
         background-repeat: no-repeat;
         background-position: right;
     }
@@ -561,7 +556,7 @@ footer .img{
         height: 100%;
         width: 70%;
         gap: 6%;
-        padding-top: 3%;
+        padding-top: 2%;
     }
     nav a{
         text-decoration: none;
@@ -574,7 +569,7 @@ footer .img{
     }
     .vertical-line-container{
         height: 100%;
-        padding-top: 3%;
+        padding-top: 2%;
         width: 1%;
         display: flex;
         flex-direction: row;
@@ -593,9 +588,8 @@ footer .img{
         background-color: transparent;
         font-family: 'Lovelo';
         color: white;
-        padding-top: 0.3%;
-        margin-bottom: 4%;
-        font-size: 90%;
+        margin-bottom: 5%;
+        font-size: 70%;
     }
     button:hover{
         cursor: pointer;
