--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     background-size: cover;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overflow: hidden;
    }
 @font-face {
     font-family: 'Lovelo';
@@ -49,6 +48,13 @@ body{
 }
 h1, h2, h3{
     font-weight: normal;
+}
+h1{
+    font-size: 2rem;
+}
+h2{
+    font-size: 2rem;
+    line-height: 300%;
 }
 header{
     display: flex;
@@ -125,9 +131,6 @@ nav p:hover{
     padding: 0% 5%;
     text-align: center;
 }
-h1{
-    font-size: 2rem;
-}
 .video-container{
     width: 90%;
     height: 40%;
@@ -160,10 +163,6 @@ h1{
 .gs{
     color: var(--golden);
 }
-h2{
-    font-size: 2rem;
-    line-height: 300%;
-}
 ul{
     font-size: 1rem;
     padding-left: 5%;
@@ -180,18 +179,16 @@ button{
     background-color: transparent;
     font-family: 'Lovelo';
     color: white;
-    padding: 3% 2%;
+    padding: 4% 2%;
     font-size: 0.9rem;
 }
 button:hover{
     cursor: pointer;
     color: var(--golden);
 }
-
-
 .image-container{
     width: 100%;
-    height: 25%;
+    height: auto;
     background-size: 60%;
     background-image: url(images/grindset-logo.png);
     background-repeat: no-repeat;
@@ -262,9 +259,10 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: space-between;
     padding: 0% 10%;
     grid-area: text1;
+    background-color: #3D2760;
 }
 #text1 .text-container {
     height: 50%;
@@ -286,9 +284,9 @@ button:hover{
     opacity: 0.7;
 }
 #text1 .image-container{
-    height: 50%;
+    height: 28rem;
     width: 90%;
-    background-size: 90%;
+    background-size: contain;
     background-image: url(images/text1-img.png);
 }
 #text2{
