--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,12 @@ mark{
 --lightpurple: #B192C1;
 }
 body{
-    padding: 0px;
-    margin: 0px;
-    height: 1265vh;
+    padding: 0;
+    margin: 0;
+    height: 1275vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.08fr 0.92fr 0.9fr 2.5fr 0.5fr 1.3fr 1.4fr 1.9fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
+    grid-template-rows: 0.08fr 0.92fr 0.9fr 2.5fr 0.5fr 1.4fr 1.4fr 1.9fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
     grid-template-areas: 
     "header"
     "video"
@@ -49,11 +49,8 @@ body{
 h1, h2, h3{
     font-weight: normal;
 }
-h1{
-    font-size: 2rem;
-}
 h2{
-    font-size: 2rem;
+    font-size: 6cqi;
     line-height: 300%;
 }
 header{
@@ -127,6 +124,9 @@ nav p:hover{
     padding-top: 30%;
     gap: 5%;
 }
+#video h1{
+    font-size: 8cqi;
+}
 .text{ 
     padding: 0% 5%;
     text-align: center;
@@ -142,7 +142,7 @@ nav p:hover{
 #obsah{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     padding: 0% 10%;
     grid-area: obsah;
@@ -151,12 +151,12 @@ nav p:hover{
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: start;
+    justify-content: center;
     width: 90%;
-    height: 75%;
+    height: 100%;
 }
 .line1{
-    font-size: 1rem;
+    font-size: 3cqi;
     opacity: 70%;
     line-height: 150%;
 }
@@ -164,7 +164,7 @@ nav p:hover{
     color: var(--golden);
 }
 ul{
-    font-size: 1rem;
+    font-size: 4cqi;
     padding-left: 5%;
 list-style-type: circle;
 }
@@ -180,7 +180,7 @@ button{
     font-family: 'Lovelo';
     color: white;
     padding: 4% 2%;
-    font-size: 0.9rem;
+    font-size: 3cqi;
 }
 button:hover{
     cursor: pointer;
@@ -209,7 +209,7 @@ button:hover{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: 80%;
     height: 88%;
 }
 .vysledky-image1, .vysledky-image3{
@@ -252,41 +252,44 @@ button:hover{
     line-height: 200%;
     grid-area: ogrindsete;
 }
+#ogrindsete h1 {
+    font-size: 6cqi;
+}
 #ogrindsete p {
-    font-size: 1rem;
+    font-size: 4cqi;
 }
 #text1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0% 10%;
     grid-area: text1;
-    background-color: #3D2760;
 }
 #text1 .text-container {
-    height: 50%;
+    height: 55%;
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: start;
     padding-top: 20%;
-    gap: 5%;
+    gap: 1%;
 }
 #text1 .text-container h2{
     line-height: normal;
 }
 #text1 .text-container p{
-    font-size: 1rem;
+    font-size: 4cqi;
     line-height: 150%;
 }
 .low-opacity{
     opacity: 0.7;
 }
 #text1 .image-container{
-    height: 28rem;
+    height: 40%;
     width: 90%;
     background-size: contain;
+    overflow: hidden;
     background-image: url(images/text1-img.png);
 }
 #text2{
