--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,6 @@ button:hover{
     justify-content: center;
     padding: 0% 10%;
     grid-area: text1;
-    background-color: #3D2760;
 }
 #text1 .text-container {
     height: 55%;
@@ -292,7 +291,6 @@ button:hover{
     background-size: contain;
     overflow: hidden;
     background-image: url(images/text1-img.png);
-    background-color: #B192C1;
 }
 #text2{
     display: flex;
@@ -309,7 +307,7 @@ button:hover{
     align-items: left;
     justify-content: start;
     padding-top: 20%;
-    gap: 5%;
+    gap: 1%;
 }
 #text2 .text-container h2{
     line-height: normal;
@@ -322,9 +320,10 @@ button:hover{
     height: 8%;
 }
 #text2 .image-container{
-    height: 45%;
+    height: 40%;
     width: 90%;
-    background-size: 90%;
+    background-size: contain;
+    overflow: hidden;
     background-image: url(images/text2-img.png);
 }
 #text3{
