--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0;
     margin: 0;
-    height: 1275vh;
+    height: 1155vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.08fr 0.92fr 0.9fr 2.5fr 0.5fr 1.4fr 1.4fr 1.9fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
+    grid-template-rows: 0.08fr 0.92fr 0.9fr 2.5fr 0.5fr 1.4fr 1.4fr 0.7fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
     grid-template-areas: 
     "header"
     "video"
@@ -42,9 +42,6 @@ body{
     background-color: black;
     font-family: 'Lovelo';
     color: white;
-}
-.disappear{
-    display: none;
 }
 h1, h2, h3{
     font-weight: normal;
@@ -80,7 +77,7 @@ header{
 .menu-container{
     bottom: 2%;
     right: 4%;
-    left: 0;
+    left: 0 ;
     display: flex;
     flex-direction: row;
     position: absolute;
@@ -406,31 +403,35 @@ button:hover{
 }
 .row1, .row2{
     width: 100%;
-    height: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    gap: 5%;
+    gap: 4%;
 }
 .question{
     width: 100%;
-    height: auto;
+    height: 7%;
+    padding: 0% 2%;
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: start;
-    gap: 10%;
+    justify-content: center;
+    gap: 1%;
+    background-color: #b7985a;
 }
-#faq h2{
+#faq h2{    
     line-height: normal;
 }
 #faq p{
+    display: none;
     line-height: 150%;
 }
 #faq h3{
+    color: black;
     font-weight: normal;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 #porozmyslaj{
     display: flex;
@@ -522,7 +523,9 @@ footer .img{
     width: 8%;
     height: 100%;
 }
-
+.disappear{
+    display: none;
+}
 @media (min-width: 768px) {
     .disappear{
         display: flex;
