--- a/styles.css
+++ b/styles.css
@@ -443,11 +443,17 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: end;
+    grid-area: porozmyslaj;
+}
+.porozmyslaj-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: start;
     text-align: center;
-    padding: 0% 10%;
-    padding-top: 5%;
-    grid-area: porozmyslaj;
+    height: 95%;
+    width: 80%;
 }
 #porozmyslaj h2{
     line-height: 150%;
