--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     height: 1175vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.08fr 0.92fr 0.9fr 2.5fr 0.5fr 1.4fr 1.4fr 0.7fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
+    grid-template-rows: 0.09fr 0.91fr 0.9fr 2.5fr 0.5fr 1.4fr 1.4fr 0.7fr  /*1fr*/ 0.45fr 2.2fr 0.5fr;
     grid-template-areas: 
     "header"
     "video"
@@ -158,16 +158,21 @@ nav p:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: end;
     grid-area: video;
-    padding-top: 30%;
-    gap: 5%;
+}
+.video-text-container{
+    height: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
 }
 #video h1{
     font-size: 8cqi;
 }
 .text{ 
-    padding: 0% 5%;
     text-align: center;
 }
 .video-container{
