--- a/styles.css
+++ b/styles.css
@@ -187,17 +187,32 @@ nav p:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 0% 10%;
+    justify-content: start;
     grid-area: obsah;
 }
-.text-container{
+.obsah-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    height: 100%;
+    width: 80%;
+}
+#obsah .text-container{
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    width: 90%;
-    height: 100%;
+    width: 100%;
+    height: 60%;
+}
+#obsah .image-container{
+    height: 40%;
+    width: 80%;
+    background-size: contain;
+    overflow: hidden;
+    background-image: url(images/grindset-logo.png);
+    box-sizing: border-box;
 }
 .line1{
     font-size: 3cqi;
