--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0;
     margin: 0;
-    height: 1417vh;
+    height: 1357vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.09fr 0.93fr 0.9fr 2.8fr 0.8fr 1.7fr 1.7fr 1fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
+    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 1fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
     grid-template-areas: 
     "header"
     "video"
@@ -346,7 +346,7 @@ button:hover{
 #text2{
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     grid-area: text2;   
     background-color: #3D2760;
 }
@@ -365,18 +365,17 @@ button:hover{
     flex-direction: column;
     align-items: left;
     justify-content: start;
-    padding-top: 20%;
     gap: 1%;
 }
 #text2 .text-container h2{
     line-height: normal;
 }
 #text2 .text-container li{
-    font-size: 1rem;
+    font-size: 4cqi;
     line-height: 150%;
 }
 #text2 .btn2{
-    height: 8%;
+    height: 6%;
 }
 #text2 .image-container{
     height: 40%;
