--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ button:hover{
     width: 80%;
 }
 #text1 .text-container {
-    height: 55%;
+    height: 35%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -348,7 +348,6 @@ button:hover{
     align-items: center;
     justify-content: center;
     grid-area: text2;   
-    background-color: #3D2760;
 }
 .text2-container{
     display: flex;
@@ -357,7 +356,6 @@ button:hover{
     justify-content: start;
     height: 100%;
     width: 80%;
-    background-color:#B192C1;
 }
 #text2 .text-container {
     height: 55%;
@@ -384,6 +382,7 @@ button:hover{
     overflow: hidden;
     background-image: url(images/text2-img.png);
     box-sizing: border-box;
+    background-repeat: no-repeat;
 }
 #text3{
     display: flex;
