--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ button:hover{
     width: 80%;
 }
 #text1 .text-container {
-    height: 35%;
+    height: 30%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -402,6 +402,7 @@ button:hover{
     align-items: center;
     justify-content: center;
     grid-area: faq;
+    background-color: #3D2760;
 }
 .faq-container{
     display: flex;
@@ -412,7 +413,8 @@ button:hover{
     height: 90%;
 }
 #faq h2{
-    font-size: 200%;
+    font-size: 6cqi;
+    line-height: 250%;
 }
 .row-container{
     width: 100%;
@@ -423,15 +425,6 @@ button:hover{
     justify-content: start;
     font-size: 1rem;
     padding-top: 5%;
-}
-.row1, .row2{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    gap: 4%;
 }
 .question{
     width: 100%;
