--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ button:hover{
     width: 80%;
 }
 #text1 .text-container {
-    height: 30%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -411,10 +411,11 @@ button:hover{
     justify-content: center;
     width: 75%;
     height: 90%;
+    gap: 2%;
+    background-color: #B192C1;
 }
 #faq h2{
     font-size: 6cqi;
-    line-height: 250%;
 }
 .row-container{
     width: 100%;
@@ -423,8 +424,8 @@ button:hover{
     flex-direction: column;
     align-items: start;
     justify-content: start;
-    font-size: 1rem;
-    padding-top: 5%;
+    font-size: 4cqi;
+    gap: 4%;
 }
 .question{
     width: 100%;
@@ -435,7 +436,7 @@ button:hover{
     align-items: left;
     justify-content: center;
     gap: 1%;
-    background-color: #b7985a;
+    background-image: linear-gradient(to bottom right, #b7985a, #544126);
 }
 #faq h2{    
     line-height: normal;
