--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0;
     margin: 0;
-    height: 1357vh;
+    height: 1407vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 1fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
+    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 1.5fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
     grid-template-areas: 
     "header"
     "video"
@@ -359,7 +359,7 @@ button:hover{
     width: 80%;
 }
 #text2 .text-container {
-    height: 55%;
+    height: 45%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -434,19 +434,20 @@ button:hover{
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    gap: 1%;
     background-image: linear-gradient(to bottom right, #b7985a, #544126);
 }
 #faq h2{    
     line-height: normal;
 }
 #faq p{
-    display: none;
+    font-size: 3cqi;
     line-height: 150%;
+    color: black;
 }
 #faq h3{
     color: white;
     font-weight: normal;
+    margin-bottom: 2%;
     font-size: 4cqi;
 }
 #porozmyslaj{
