--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0;
     margin: 0;
-    height: 1447vh;
+    height: 1467vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 1.9fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
+    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 2.2fr  /*1fr*/ 0.75fr 2.5fr 0.8fr;
     grid-template-areas: 
     "header"
     "video"
@@ -359,7 +359,7 @@ button:hover{
     width: 80%;
 }
 #text2 .text-container {
-    height: 45%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -454,7 +454,7 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     grid-area: porozmyslaj;
 }
 .porozmyslaj-container{
@@ -463,7 +463,7 @@ button:hover{
     align-items: center;
     justify-content: start;
     text-align: center;
-    height: 95%;
+    height: 55%;
     width: 80%;
 }
 #porozmyslaj h2{
@@ -471,6 +471,7 @@ button:hover{
 }
 #porozmyslaj p{
     line-height: 150%;
+    font-size: 4cqi;
 }
 #porozmyslaj button{
     width: 10%;
