--- a/styles.css
+++ b/styles.css
@@ -454,16 +454,16 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     grid-area: porozmyslaj;
 }
 .porozmyslaj-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: end;
     text-align: center;
-    height: 55%;
+    height: 100%;
     width: 80%;
 }
 #porozmyslaj h2{
