--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,10 @@ mark{
 body{
     padding: 0;
     margin: 0;
-    height: 1532vh;
+    height: 1442vh;
     display: grid;  
     grid-template-columns: 1fr;
-    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 2.5fr  /*1fr*/ 1.2fr 2.5fr 0.8fr;
+    grid-template-rows: 0.09fr 0.93fr 0.5fr 2.8fr 0.8fr 1.7fr 1.7fr 1.6fr 0.8fr 2.5fr 0.8fr;
     grid-template-areas: 
     "header"
     "video"
@@ -34,7 +34,6 @@ body{
     "ogrindsete"
     "text1"
     "text2"
-    /*"text3"*/
     "faq"
     "porozmyslaj"
     "vysledky2"
@@ -454,14 +453,14 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     grid-area: porozmyslaj;
 }
 .porozmyslaj-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     text-align: center;
     height: 100%;
     width: 80%;
