--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,12 @@ background-color: black;
 font-family: 'Lovelo';
 src: url(fonts/Lovelo\ Black.otf);
 }
+
 @media (min-width:992px){
+    nav img {
+        width: 250px;
+        height: 100px;
+        }
     .navbar{
         display: flex;
         flex-direction: row;
@@ -19,12 +24,7 @@ src: url(fonts/Lovelo\ Black.otf);
         align-items: center;
     }
     .navbar-brand{
-        display: flex;
-        flex-direction: row;
-        justify-content: start;
-        align-items: start;
         padding-left: 5%;
-        width: 25%;
     }
     .start-logo{
         width: 35%;
@@ -37,6 +37,9 @@ src: url(fonts/Lovelo\ Black.otf);
         gap: 5%;
         width: 50%;
         padding-top: 3%;
+    }
+    .navbar-collapse{
+        padding-right: 3rem;
     }
 }
 @media (max-width:992px){
@@ -68,6 +71,10 @@ src: url(fonts/Lovelo\ Black.otf);
     .display-none{
         display: none;
     }
+    nav img {
+        width: 190px;
+        height: 80px;
+        }
     .navbar{
         display: flex;
         flex-direction: row;
